--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,10 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snow Prediction</title>
         <link rel="stylesheet" href="css/styles.css">
+        <script type="text/javascript" src="app.js"></script>
     </head>
     <body>
         <div class="image-container">
-            <button class="button">Display Predictions</button> 
-        </div>    
+            <button id="button" class="button" onclick="displayPrediction()">Display Predictions</button> 
+        </div>   
+    <div id='float-container' class="float-container">
+            <div class="float-child">
+                <box1 class="box">BOX ONE</box1>
+            </div>
+            <div class="float-child">
+                   <box2 class="box">BOX TWO</box2>
+            </div>   
+    </div>
     </body>
 </html>
