--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
                 <box1 class="box">BOX ONE</box1>
             </div>
             <div class="float-child">
-                   <box2 class="box">BOX TWO</box2>
+                   <box2 class="box">document.write(tomorrowsPrediction())</box2>
             </div>   
     </div>
     </body>
