--- a/index.html
+++ b/index.html
@@ -10,6 +10,45 @@
             import { displayPrediction, todaysPrediction } from "./HTML/app.js"
             window.displayPrediction = displayPrediction;
         </script>
+
+        <!-- Open Graph meta tags for social media sharing -->
+        <meta property="og:title" content="Snow Prediction" />
+        <meta property="og:description" content="Snowfall forecast for Snoqualmie Pass." />
+        <meta property="og:image" content="https://algernopkrieger42.github.io/Exit52/HTML/images/thumbnail.jpg" />
+        <meta property="og:url" content="https://algernopkrieger42.github.io/Exit52/" />
+        <meta property="og:type" content="website" />
+
+        <!-- Favicon for browser tabs -->
+        <link rel="icon" href="https://algernopkrieger42.github.io/Exit52/HTML/images/thumbnail.jpg" sizes="256x256" />
+    </head>
+    <body>
+        <div class="image-container">
+            <button id="button" class="button" onclick="displayPrediction()">Display Predictions</button> 
+        </div>   
+        <div id='float-container' class="float-container">
+            <div class="float-child">
+                <box1 id="box1" class="box">404</box1>
+            </div>
+            <div class="float-child">
+                <box2 id="box2" class="box">Pow Not Found</box2>
+            </div>   
+        </div>
+    </body>
+</html>
+
+
+<!--<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Snow Prediction</title>
+        <link rel="stylesheet" href="HTML/css/styles.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script type="module" defer>
+            import { displayPrediction, todaysPrediction } from "./HTML/app.js"
+            window.displayPrediction = displayPrediction;
+        </script>
     </head>
     <body>
         <div class="image-container">
@@ -24,4 +63,4 @@
             </div>   
     </div>
     </body>
-</html>
+</html>-->
