--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="image-container">
             <div id="loadingWindow" class="window">Loading Predictions...</div>
-            <div id="errorWindow" class="window">There was an error loading predictions</div> 
+            <div id="errorWindow" class="window">An error occurred</div> 
         </div>   
         <div id='float-container' class="float-container">
             <div class="float-child">
